Fix overflow on list item

--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ html {
   border-color: #e8e8e8;
   border-width: 1px;
   border-style: solid;
-  height: 22vh;
+  height: 25%;
   margin-top: 2.375rem;
   padding: 20px;
 }
@@ -75,7 +75,7 @@ html {
 }
 
 .left {
-  width: 25rem;
+  width: 35vw;
 }
 
 .middle {
@@ -84,8 +84,8 @@ html {
 }
 
 .progress-wheel {
-  width: 4.25rem;
-  height: 4.25rem;
+  width: 15vh;
+  height: 15vh;
   border-style: solid;
   border-width: 5px;
   border-color: #379cf6;
@@ -111,9 +111,7 @@ html {
 }
 
 .line {
-  width: 0.125rem;
-  height: 4.375rem;
-  margin: 1.125rem 3.688rem 0 4.938rem;
+  height: 25vh;
   border-left: solid 2px #e8e8e8;
 }
 
